# solaris-pointing

./: .coveragerc  .gitignore  README.md  pyproject.toml  readthedocs.yaml  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: ci.yml
config/: concordia.toml  mzs.ini  mzs.toml  template.toml  template_models.toml
config/algos/: gauss2d_default.toml  peak1d_default.toml
config/runs/: run_mzs.toml
config/sites/: mzs.toml
examples/: az_model_example.py  offset_io_example.py  predict_example.py
models/: models_info.txt
myalgo/: algo_buttu_01.py  algo_buttu_02.py  buttu_1.py  buttu_2.py  buttu_3.py
myalgo/06_new_algo_tuning/: new_algo_tuning.py
myalgo/06_new_algo_tuning/models/: new.joblib  new_summary.txt  new_tuning.joblib  new_tuning_summary.txt
myalgo/06_new_algo_tuning/offsets/: new.tsv  new_tuning.tsv
myalgo/06_reference/: new_algo.py  note.txt
offsets/: offsets_info.txt
scripts/: az_model_cli.py  generate_model.py  generate_offsets.py  model_cli.py  pointing_offsets_cli.py
src/solaris_pointing/fitting/: az_model.py
src/solaris_pointing/offset_core/: model.py  (+8 more)
templates/: environment.tsv  output_offset_io_example.tsv
tests/: conftest.py
tests/fitting/: test_az_model.py
tests/models/: test_az_model.py
tests/offset_core/: test_discovery.py  test_env_loader.py  test_io_writer.py  test_model.py
tests/offset_io/: test_append.py  test_env_nonfinite_serialization.py  test_formatters_nan.py  test_header_validation.py  test_models.py  test_property_based.py  test_write_new.py
tests/offsets/: test_model_1d.py  test_offsets_io.py  test_sun_maps.py
tests/offsets_fitting/: test_model_1d.py
tests/offsets_io/: test_append.py  test_env_nonfinite_serialization.py  test_formatters_nan.py  test_header_validation.py  test_models.py  test_property_based.py  test_write_new.py
tests/scripts/: test_generate_model.py  test_generate_offsets.py  test_model_cli.py  test_pointing_offsets_cli.py
(+8 files in other folders)
